# otus-cpp-05.homework

./: CMakeLists.txt  CanvasController.cpp  CanvasController.h  CanvasModel.cpp  CanvasModel.h  CanvasView.cpp  CanvasView.h  CustomSharedPtr.h  CustomUniquePtr.h  CustomVector.h  Doxyfile  Math.h  editor.cpp  lib_sfinae.h  main.cpp  test_editor.cpp
.github/workflows/: release.yml  static.yml
Action/: Action.h
Canvas/: CanvasController.cpp  CanvasController.h  CanvasModel.cpp  CanvasModel.h  CanvasView.cpp  CanvasView.h  ICanvasModel.h  ICanvasView.h  MockCanvasView.cpp  MockCanvasView.h
Exporter/: CustomFileIExporter.cpp  CustomFileIExporter.h  IExporter.h
GraphicPrimitives/: Circle.cpp  Circle.h  GraphicPrimitive.cpp  GraphicPrimitive.h  GraphicPrimitiveType.h  Square.cpp  Square.h
Importer/: CustomFileImporter.cpp  CustomFileImporter.h  IIimporter.h  TestIimporter.cpp  TestIimporter.h
Observe/: IObservable.h  IObserver.h  Observable.cpp  Observable.h
docs/html/: Action_8h.html  Action_8h__dep__incl.map  Action_8h__dep__incl.md5  Action_8h__incl.map  Action_8h__incl.md5  Action_8h_source.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CanvasController_8cpp.html  CanvasController_8cpp__incl.map  CanvasController_8cpp__incl.md5  CanvasController_8h.html  CanvasController_8h__dep__incl.map  CanvasController_8h__dep__incl.md5  CanvasController_8h__incl.map  CanvasController_8h__incl.md5  CanvasController_8h_source.html  CanvasModel_8cpp.html  CanvasModel_8cpp__incl.map  CanvasModel_8cpp__incl.md5  CanvasModel_8h.html  CanvasModel_8h__dep__incl.map  CanvasModel_8h__dep__incl.md5  CanvasModel_8h__incl.map  CanvasModel_8h__incl.md5  CanvasModel_8h_source.html  CanvasView_8cpp.html  CanvasView_8cpp__incl.map  CanvasView_8cpp__incl.md5  CanvasView_8h.html  CanvasView_8h__dep__incl.map  CanvasView_8h__dep__incl.md5  CanvasView_8h__incl.map  CanvasView_8h__incl.md5  CanvasView_8h_source.html  Circle_8cpp.html  Circle_8cpp__incl.map  Circle_8cpp__incl.md5  Circle_8h.html  Circle_8h__dep__incl.map  (+417 more)
docs/html/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_2.js  defines_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  (+21 more)
